@@ -259,6 +259,14 @@ namespace MonoDevelop.Xml.StateEngine
 			return new DomLocation (Location.Line, col);
 		}
 		
+		DomRegion LocationCurrentChar {
+			get {
+				int col = Location.Column - 1;
+				System.Diagnostics.Debug.Assert (col > 0);
+				return new DomRegion (Location.Line, col, Location.Line, Location.Column);
+			}
+		}
+		
 		StringBuilder IParseContext.KeywordBuilder {
 			get { return keywordBuilder; }
 		}
@@ -275,13 +283,13 @@ namespace MonoDevelop.Xml.StateEngine
 		void IParseContext.LogError (string message)
 		{
 			if (errors != null || ErrorLogged != null)
-				InternalLogError (new Error (ErrorType.Error, Location, message));
+				InternalLogError (new Error (ErrorType.Error, LocationCurrentChar, message));
 		}
 		
 		void IParseContext.LogWarning (string message)
 		{
 			if (errors != null || ErrorLogged != null)
-				InternalLogError (new Error (ErrorType.Warning, Location, message));
+				InternalLogError (new Error (ErrorType.Warning, LocationCurrentChar, message));
 		}
 		
 		void IParseContext.LogError (string message, DomLocation location)
